# Solo-Renderer

./: CMakeLists.txt  README.md  SoloRenderer.sln  all.bat  build.bat  imgui.ini  run.bat
Solo-App/: CMakeLists.txt
Solo-App/src/: SoloApp.cpp  SoloApp.h
Solo-App/src/Test/: Test.h  TestMainMenu.cpp  TestMainMenu.h  TestSampleScene.cpp  TestSampleScene.h
Solo-Core/: CMakeLists.txt
Solo-Core/src/Folder/: Folder.cpp  Folder.h
Solo-Core/src/Renderer/: IBO.cpp  IBO.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VBOLayout.h
Solo-Core/src/Shader/: MainMenu.shader  Shader.shader
Solo-Core/src/Solo/: SoloCore.cpp
Solo-Core/src/Window/: Window.cpp  Window.h
SoloRenderer/: SoloRenderer.vcxproj  SoloRenderer.vcxproj.filters
SoloRenderer/Debug/: SoloRenderer.exe.recipe  SoloRenderer.ilk  vc143.idb
SoloRenderer/Debug/SoloRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SoloRenderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SoloRenderer/res/shaders/: Shader.shader
SoloRenderer/src/: GLCall.cpp  GLCall.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SoloRenderer.cpp  Versions.cpp  Versions.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
